# Silice3D

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
src/Silice3D/camera/: bullet_free_fly_camera.cpp  bullet_free_fly_camera.hpp  free_fly_camera.cpp  free_fly_camera.hpp  icamera.cpp  icamera.hpp  perspective_camera.cpp  perspective_camera.hpp  third_personal_camera.cpp  third_personal_camera.hpp
src/Silice3D/collision/: bounding_box.cpp  bounding_box.hpp  frustum.hpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp
src/Silice3D/common/: auto_reset_event.cpp  auto_reset_event.hpp  glm.hpp  make_unique.hpp  math.hpp  oglwrap.hpp  optimizations.hpp  thread_pool.cpp  thread_pool.hpp  timer.cpp  timer.hpp  transform-inl.hpp  transform.hpp
src/Silice3D/core/: game_engine.cpp  game_engine.hpp  game_object-inl.hpp  game_object.cpp  game_object.hpp  scene.cpp  scene.hpp
src/Silice3D/debug/: debug_shape-inl.hpp  debug_shape.hpp  debug_texture.cpp  debug_texture.hpp  fps_display.cpp  fps_display.hpp
src/Silice3D/gui/: label.cpp  label.hpp
src/Silice3D/lighting/: directional_light_source.cpp  directional_light_source.hpp  light_source.cpp  light_source.hpp  point_light_source.cpp  point_light_source.hpp  shadow.cpp  shadow.hpp  shadow_caster.cpp  shadow_caster.hpp
src/Silice3D/mesh/: assimp.hpp  imesh_object_renderer.cpp  imesh_object_renderer.hpp  mesh_object.cpp  mesh_object.hpp  mesh_object_batch_renderer.cpp  mesh_object_batch_renderer.hpp  mesh_object_renderer.cpp  mesh_object_renderer.hpp  mesh_renderer.cpp  mesh_renderer.hpp
src/Silice3D/physics/: bullet_rigid_body.cpp  bullet_rigid_body.hpp
src/Silice3D/shaders/: shader_file.cpp  shader_file.hpp  shader_manager.cpp  shader_manager.hpp  shader_program.cpp  shader_program.hpp
src/Silice3D/shaders/builtin/: bicubic_sampling.glsl  debug_shape.frag  debug_shape.vert  debug_texture.frag  debug_texture.vert  lighting.frag  mesh.frag  mesh.vert  mesh_shadow.frag  post_process.frag  shadow.frag  shadow.vert
